crates/tokmd/tests/snapshots/cli_snapshot_golden__help_ast.snap
---
source: crates/tokmd/tests/cli_snapshot_golden.rs
expression: normalize(stdout)
---
tokmd — code awareness for AI contexts

Usage: tokmd [OPTIONS] [PATH]... [COMMAND]

Commands:
  lang             Language summary (default)
  module           Module summary (group by path prefixes like `crates/<name>` or `packages/<name>`)
  export           Export a file-level dataset (CSV / JSONL / JSON)
  analyze          Analyze receipts or paths to produce derived metrics [alias: analyse]
  badge            Render a simple SVG badge for a metric
  init             Write a `.tokeignore` template to the target directory
  completions      Generate shell completions [alias: completion]
  run              Run a full scan and save receipts to a state directory
  diff             Compare two receipts or runs
  context          Pack files into an LLM context window within a token budget
  check-ignore     Check why a file is being ignored (for troubleshooting)
  tools            Output CLI schema as JSON for AI agents
  gate             Evaluate policy rules against analysis receipts
  cockpit          Generate PR cockpit metrics for code review
  baseline         Generate a complexity baseline for trend tracking
  handoff          Bundle codebase for LLM handoff
  sensor           Run as a conforming sensor, producing a SensorReport
  syntax           Emit feature-gated Tree-sitter syntax receipts
  evidence-packet  Write a scoped evidence packet manifest
  packet           Generate evidence packets over the existing receipt commands
  render           Render audience-specific Markdown from cross-tool packet bundles
  help             Print this message or the help of the given subcommand(s)

Arguments:
  [PATH]...
          Paths to scan (directories, files, or globs). Defaults to "."

Options:
      --exclude <PATTERN>
          Exclude pattern(s) using gitignore syntax. Repeatable.
          
          Examples: --exclude target --exclude "**/*.min.js"
          
          [alias: --ignore]

      --config <MODE>
          Whether to load scan config files (`tokei.toml` / `.tokeirc`). `tokmd.toml` is discovered separately; set `TOKMD_CONFIG` to override its path

          Possible values:
          - auto: Read scan config files (`tokei.toml` / `.tokeirc`) if present
          - none: Ignore scan config files (`tokei.toml` / `.tokeirc`)
          
          [default: auto]

      --hidden
          Count hidden files and directories

      --no-ignore
          Don't respect ignore files (.gitignore, .ignore, etc.).
          
          Implies --no-ignore-parent, --no-ignore-dot, and --no-ignore-vcs.

      --no-ignore-parent
          Don't respect ignore files in parent directories

      --no-ignore-dot
          Don't respect .ignore and .tokeignore files (including in parent directories)

      --no-ignore-vcs
          Don't respect VCS ignore files (.gitignore, .hgignore, etc.), including in parents
          
          [alias: --no-ignore-git]

      --treat-doc-strings-as-comments
          Treat doc strings as comments (language-dependent)

  -v, --verbose...
          Verbose output (repeat for more detail)

      --no-progress
          Disable progress spinners

      --format <FORMAT>
          Output format [default: md]

          Possible values:
          - md:   Markdown table (great for pasting into ChatGPT)
          - tsv:  Tab-separated values (good for piping to other tools)
          - json: JSON (compact)

      --top <TOP>
          Show only the top N rows (by code lines), plus an "Other" row if needed. Use 0 to show all rows

      --files
          Include file counts and average lines per file

      --children <CHILDREN>
          How to handle embedded languages (tokei "children" / blobs) [default: collapse]

          Possible values:
          - collapse: Merge embedded content into the parent language totals
          - separate: Show embedded languages as separate "(embedded)" rows

      --profile <PROFILE>
          Configuration profile to use (e.g., "llm_safe", "ci")
          
          [alias: --view]

      --show-config
          Print the resolved configuration sources and values, then exit

  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version

Examples:
  tokmd lang --top 10 --files
  tokmd lang crates --format json
